# order-matching-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  post-program.md
.github/workflows/: ci.yml
bench/: .gitignore  bench_latency.cpp  bench_soak.cpp  bench_throughput.cpp  plot_results.py  throughput_results.json
demo/: demo.cast  demo_record.sh  fix_client.py
docs/: .gitignore  DESIGN.md  INTERVIEW_PREP.md
include/: events.hpp  fix42_parser.hpp  fix42_serializer.hpp  fix42_session.hpp  fix_gateway.hpp  fix_parser.hpp  matching_engine.hpp  matching_pipeline.hpp  object_pool.hpp  order.hpp  order_book.hpp  order_command.hpp  order_types.hpp  price.hpp  price_level.hpp  spsc_queue.hpp  tcp_server.hpp  trade.hpp
src/: fix42_parser.cpp  fix42_serializer.cpp  fix_gateway.cpp  fix_parser.cpp  main.cpp  order_book.cpp  price_level.cpp  tcp_server.cpp
test/: test_amend_orders.cpp  test_events.cpp  test_fix42_parser.cpp  test_fix42_serializer.cpp  test_fix_gateway.cpp  test_fix_parser.cpp  test_fok_orders.cpp  test_integration.cpp  test_ioc_orders.cpp  test_main.cpp  test_market_data.cpp  test_market_orders.cpp  test_matching.cpp  test_matching_engine.cpp  test_object_pool.cpp  test_order.cpp  test_order_book.cpp  test_pipeline.cpp  test_price.cpp  test_price_level.cpp  test_spsc_queue.cpp  test_tcp_server.cpp
